--- a/Reader pdf/pom.xml
+++ b/Reader pdf/pom.xml
@@ -30,6 +30,41 @@
       <artifactId>itextpdf</artifactId>
       <version>5.5.13</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>pdfbox</artifactId>
+        <version>2.0.27</version>
+    </dependency>
+    
+    <!-- FontBox -->
+    <dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>fontbox</artifactId>
+        <version>2.0.27</version>
+    </dependency>
+    
+    <!-- JBIG2 ImageIO plugin (optional) -->
+    <dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>jbig2-imageio</artifactId>
+        <version>3.0.2</version>
+    </dependency>
+    
+    <!-- PDFBox Tools (optional) -->
+    <dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>pdfbox-tools</artifactId>
+        <version>2.0.27</version>
+    </dependency>
+    
+    <!-- PDFBox Debugger (optional) -->
+    <dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>pdfbox-debugger</artifactId>
+        <version>2.0.27</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
